--- a/index.html
+++ b/index.html
@@ -40,37 +40,51 @@
             transform-style: preserve-3d;
         }
         .box .origin .og {
-            background: url(./images/ju\(1\).jpg) no-repeat;
+            background: url(./images/1.jpg);
+            background-size: cover;
             background-color: purple;
             transform: rotateY(20deg);
         }
         .box .origin .photo {
-            background: url(./images/ju\(1\).jpg) no-repeat;
+            background: url(./images/1.jpg);
+            background-size: cover;
             opacity: .8;
         }
         .box .origin .photo:nth-child(1) {
             background-color: green;
             transform: rotateY(60deg) translateZ(400px);
+            background: url(./images/2.jpg);
+            background-size: cover;
         }
         .box .origin .photo:nth-child(2) {
             background-color: blue;
             transform: rotateY(120deg) translateZ(400px);
+            background: url(./images/3.jpg);
+            background-size: cover;
         }
         .box .origin .photo:nth-child(3) {
             background-color: yellow;
             transform: rotateY(180deg) translateZ(400px);
+            background: url(./images/4.jpg);
+            background-size: cover;
         }
         .box .origin .photo:nth-child(4) {
             background-color: yellowgreen;
             transform: rotateY(240deg) translateZ(400px);
+            background: url(./images/5.jpg);
+            background-size: cover;
         }
         .box .origin .photo:nth-child(5) {
             background-color: skyblue;
             transform: rotateY(300deg) translateZ(400px);
+            background: url(./images/6.jpg);
+            background-size: cover;
         }
         .box .origin .photo:nth-child(6) {
             background-color: saddlebrown;
             transform: rotateY(360deg) translateZ(400px);
+            background: url(./images/7.jpg);
+            background-size: cover;
         }
         .box .origin .photos {
             animation: rotate 10s linear infinite;
